--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"axios": "^1.1.2",
 		"concurrently": "^7.4.0",
+		"nanoid": "^4.0.0",
 		"prettier": "^2.7.1",
 		"react": "^18.2.0",
 		"react-bootstrap": "^2.5.0",
@@ -37,6 +38,5 @@
 			"last 1 firefox version",
 			"last 1 safari version"
 		]
-	},
-	"proxy": "http://localhost:5001/"
+	}
 }
