--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"dependencies": {
 		"axios": "^1.1.2",
 		"concurrently": "^7.4.0",
+		"cors": "^2.8.5",
 		"http-proxy-middleware": "^2.0.6",
 		"nanoid": "^4.0.0",
 		"prettier": "^2.7.1",
